<resources>
    <string name="app_name">ZhiXue</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="input_telphone">请输入手机号</string>
    <string name="input_telphone_11">请输入11位手机号</string>
    <string name="input_new_telphone">请输入您的新手机号</string>
    <string name="input_password">请输入您的密码</string>
    <string name="setting_pwd">密码为6～16位字符，由数字和字母组合</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="weixin_login">微信登录</string>
    <string name="login_phone">手机号不能为空</string>
    <string name="login_right_phone">请输入正确的手机号</string>
    <string name="login_pwd">密码不能为空</string>
    <string name="login_confirm_pwd">确认密码不能为空</string>
    <string name="login_long_pwd">请输入6-16位密码</string>
    <string name="login_confirm_error">确认密码与密码不一致</string>
    <string name="login_pwd_letter">密码请设置为数字和字母组合</string>
    <string name="login_code_later">秒后重发</string>
    <string name="login_right_code">验证码不能为空</string>
    <string name="code_error">验证码不正确</string>
</resources>
